[project]
name = "stLENS"
version = "0.1.0.dev11"
requires-python = "==3.10"
dependencies = [
    "scanpy==1.11.3",
    "pandas==2.3.1",
    "scipy==1.16.0",
    "numpy==2.3.1",
    "tqdm==4.67.1",
    "zarr==3.1.0",
    "anndata==0.12.0",
    "matplotlib==3.10.3",
    "dask==2025.7.0",
    "seaborn==0.13.2"
]

[build-system]
requires = ["setuptools==61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
script-files = ["setup.py"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stLENS" = ["*.so", "*.cpp"]
