[project]
name = "stLENS"
version = "0.1.0.dev12"
requires-python = "<3.12"
dependencies = [
    "scanpy<=1.11.3",
    "pandas==2.3.1",
    "scipy<=1.15.3",
    "numpy<=2.2.6",
    "tqdm==4.67.1",
    "zarr<=2.18.7",
    "anndata<=0.11.4",
    "matplotlib<=3.10.3",
    "dask<=2025.7.0",
    "seaborn==0.13.2"
]

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"