[project]
name = "stLENS"
version = "0.1.0.dev10"
requires-python = ">=3.9,<3.12"
dependencies = [
    "scanpy<=1.11.3",
    "pandas<=2.3.1",
    "scipy<=1.15.3",
    "numpy<=2.2.6",
    "tqdm==4.67.1",
    "zarr<=2.18.7",
    "anndata<=0.11.4",
    "matplotlib<=3.10.3",
    "dask<=2025.7.0",
    "seaborn==0.13.2"
]

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[tool.cibuildwheel]
# Build wheels for Python 3.9, 3.10, and 3.11
build = ["cp39-*", "cp310-*", "cp311-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_i686"]

# Linux settings
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

# macOS settings
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

# Windows settings  
[tool.cibuildwheel.windows]
archs = ["AMD64"]

# Install build dependencies in the build environment
before-build = [
    "pip install meson-python meson ninja",
]
